--- a/src/App.css
+++ b/src/App.css
@@ -85,12 +85,14 @@ img {
   color: #808080;
   display: block;
   margin-bottom: 10px;
+  margin-right: 40px;
 }
 .card-category {
   font-size: 15px;
   font-weight: 500;
   color: #808080;
   display: block;
+  margin-bottom: 15px;
 }
 .card:hover {
   background-color: rgba(192, 192, 192, 0.3);
@@ -134,12 +136,46 @@ img {
   margin-bottom: 40px;
   line-height: 21px;
 }
+.card-title {
+  min-height: 33px;
+}
 .single-record .card-title {
   margin-bottom: 20px;
 }
+
 .user-price {
   display: block;
   color: #000;
   font-size: 27px;
   margin-top: 7px;
+}
+.add-to-cart {
+  background-color: #000;
+  color: #fff;
+  max-width: 260px;
+  margin: 0 auto;
+  width: 100%;
+  height: 40px;
+}
+.cart-button span {
+  margin: 0 10px;
+}
+.cart-button button {
+  width: 30px;
+  height: 30px;
+}
+.quantity {
+  margin: 0 9px;
+  font-weight: 600;
+  font-size: 20px;
+}
+span {
+  display: inline-block;
+}
+.cart-info {
+  width: 56%;
+  margin: 28px auto 0;
+}
+.cart-image {
+  width: 36%;
 }
