--- a/src/App.css
+++ b/src/App.css
@@ -94,9 +94,9 @@ img {
   display: block;
   margin-bottom: 15px;
 }
-.card:hover {
+/* .card:hover {
   background-color: rgba(192, 192, 192, 0.3);
-}
+} */
 .card a {
   position: absolute;
   top: 39%;
@@ -178,4 +178,85 @@ span {
 }
 .cart-image {
   width: 36%;
+}
+.skeleton:hover {
+  background-color: none;
+}
+.cart-icon {
+  margin-right: 15px;
+  cursor: pointer;
+}
+form {
+  position: relative;
+}
+.cart-item {
+  position: absolute;
+  top: -8px;
+  left: 4px;
+  background: red;
+  color: white;
+  padding: 0 4px;
+  font-size: 12px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.cart-btn {
+  max-width: 236px;
+  width: 100%;
+  display: block;
+}
+.checkout {
+  margin-top: 30px;
+  max-width: 236px;
+  width: 100%;
+  display: block;
+}
+.cart-btns button {
+  display: block;
+}
+.bansic-info {
+  text-align: left;
+}
+.address {
+  max-width: 421px;
+}
+.city {
+  max-width: 136px;
+}
+.bansic-info form {
+  max-width: 500px;
+  border: 1px solid lightgray;
+  padding: 15px;
+  margin-top: 18px;
+  border-radius: 6px;
+}
+.product {
+  width: 40%;
+  margin: 10px 0 0 36px;
+}
+.checkout-btn {
+  max-width: 270px;
+  width: 100%;
+}
+.check-out-btn {
+  width: 250px;
+  display: block;
+  background: lightsteelblue;
+  text-decoration: none;
+  border-radius: 3px;
+  height: 35px;
+  padding: 4px 0 0 0;
+  margin-top: 25px;
+  color: white;
+}
+.cart-btns a{
+  max-width: 237px;
+  display: block;
+  height: 40px;
+  position: unset;
+  margin-top: 20px;
+  border-radius: 3px;
+  padding-top: 5px;
+  text-align: center;
+
 }
